mcp/int/int-mcp-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-server-deployment
  namespace: intmcp
  labels:
    app: mcp-server
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mcp-server
  template:
    metadata:
      labels:
        app: mcp-server
    spec:
      containers:
      - name: mcp-server
        image: fernandobenegasa/test:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
