mcp/int/int-mcp-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-server-service
  namespace: intmcp
spec:
  type: ClusterIP 
  selector:
    app: mcp-server 
  ports:
  - protocol: TCP
    port: 8080
