mcp/int/int-mcp-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-server-deployment
  namespace: intmcp
  labels:
    app: mcp-server
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mcp-server
  template:
    metadata:
      labels:
        app: mcp-server
    spec:
      containers:
      - name: mcp-server
        image: fernandobenegasa/test:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-server-service
  namespace: intmcp
spec:
  type: ClusterIP 
  selector:
    app: mcp-server 
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8080
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcp-ingressroute
  namespace: intmcp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`intmcp.${CLUSTERNAME}.${DOMAINNAME}`)
      kind: Rule
      services:
        - name: mcp-server-service
          port: 80
  tls:
    certResolver: le
